tests/js/valid/comments/in-a-block.buri
hello = () =>
    x = 1 + 1
    -- this is a comment
    x
