tests/js/invalid/function/argument-shadowing.buri
a = 1

-- argument names cannot shadow global names
func = (a) => a